--- a/static/css/sections/docs.styl
+++ b/static/css/sections/docs.styl
@@ -21,11 +21,11 @@
     display: none
 
 .nav-docs
-  width: 20%
+  width: 250px
   padding-right: 10px
 
 .docs-content
-  padding-left: 30%
+  padding-left: 280px
   min-height: 350px
 
   .anchor
@@ -63,6 +63,14 @@
       font-size: 0.6em
       background: none
       font-weight: normal
+
+@media (max-width: 1000px)
+
+  .nav-docs
+    width: 200px
+
+  .docs-content
+    padding-left: 230px
 
 @media (max-width: 860px)
 
